[gd_scene load_steps=7 format=3 uid="uid://cuh5eo4mk36ak"]

[ext_resource type="Script" uid="uid://cxtsrr081cu1v" path="res://upgrade system/upgrade_node.gd" id="1_sigt7"]
[ext_resource type="Theme" uid="uid://brntsa6831d7c" path="res://upgrade system/themes/upgrade_node_locked_theme.tres" id="2_2m2d3"]
[ext_resource type="Theme" uid="uid://bmtgglhybhoi" path="res://ui/themes/upgrade_label.tres" id="2_m2iyk"]
[ext_resource type="Texture2D" uid="uid://bctcrbr1wmlwb" path="res://upgrade system/assets/explosive_icon.svg" id="3_2m2d3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_slbv1"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_m2iyk"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_slbv1")

[node name="UpgradeNode" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_sigt7")

[node name="PurchaseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_right = 48.0
offset_bottom = 96.0
grow_horizontal = 2
theme = ExtResource("2_2m2d3")
icon = ExtResource("3_2m2d3")
icon_alignment = 1

[node name="UpgradeDataDisplay" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -167.0
offset_top = -148.0
offset_right = 167.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
theme = SubResource("Theme_m2iyk")

[node name="NumberDataDisplay" type="PanelContainer" parent="UpgradeDataDisplay"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -167.0
offset_top = -116.0
offset_right = 167.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="InfoContainer" type="MarginContainer" parent="UpgradeDataDisplay/NumberDataDisplay"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Labels" type="VBoxContainer" parent="UpgradeDataDisplay/NumberDataDisplay/InfoContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="UpgradeDataDisplay/NumberDataDisplay/InfoContainer/Labels"]
layout_mode = 2
theme = ExtResource("2_m2iyk")
theme_override_font_sizes/font_size = 16
text = "Increases the explosion damage"
horizontal_alignment = 1
autowrap_mode = 2

[node name="BeforeAfterLabel" type="Label" parent="UpgradeDataDisplay/NumberDataDisplay/InfoContainer/Labels"]
layout_mode = 2
theme = ExtResource("2_m2iyk")
theme_override_font_sizes/font_size = 16
text = "100% -> 125%"
horizontal_alignment = 1

[node name="LineSpaceLabel" type="Label" parent="UpgradeDataDisplay/NumberDataDisplay/InfoContainer/Labels"]
layout_mode = 2
text = "---------------------------------------------------------"
horizontal_alignment = 1

[node name="PriceLabel" type="Label" parent="UpgradeDataDisplay/NumberDataDisplay/InfoContainer/Labels"]
layout_mode = 2
theme = ExtResource("2_m2iyk")
theme_override_font_sizes/font_size = 18
text = "$1000"
horizontal_alignment = 1

[node name="NameDisplay" type="PanelContainer" parent="UpgradeDataDisplay"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -102.0
offset_right = 102.0
offset_bottom = 40.0
grow_horizontal = 2
mouse_filter = 1

[node name="NameLabel" type="Label" parent="UpgradeDataDisplay/NameDisplay"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_m2iyk")
theme_override_font_sizes/font_size = 24
text = "Explosive Power"

[connection signal="mouse_entered" from="PurchaseButton" to="." method="_on_purchase_button_mouse_entered"]
[connection signal="mouse_exited" from="PurchaseButton" to="." method="_on_purchase_button_mouse_exited"]
[connection signal="pressed" from="PurchaseButton" to="." method="_on_purchase_button_pressed"]
